# llm-structure-extraction

./: LICENSE  README.md  pyproject.toml
sample_data/: hf_dataset_example.ipynb
sample_data/consultation_identifier=jhy49xxg/document_uuid=1CYnpdj6YGpNPhTquEvFxf/: fedlex-data-admin-ch-eli-dl-proj-2025-104-cons_1-doc_1-de-pdf-a.json
sample_data/consultation_identifier=x6czdp9e/document_uuid=1CQW6TGQhXvz94s57cbXiw/: fedlex-data-admin-ch-eli-dl-proj-2025-21-cons_1-doc_1-de-pdf-a.json
